--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.2",
-    "request": "^2.81.0"
-  },
-  "devDependencies": {
+    "request": "^2.81.0",
     "babel-core": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0"
